# schaltwerk

./: .gitignore  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  eslint.config.js  index.html  justfile  knip.json  package-lock.json  package.json  style-guide.html  tailwind.config.js  vite.config.ts  vite.playground.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Info.plist  agents_manifest.toml  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/crates/pty_host/src/: host.rs
src-tauri/icons/: icon.icns
src-tauri/resources/docker/: Dockerfile
src-tauri/src/: binary_detection.rs  cli.rs  dev_info.rs  diff_commands.rs  errors.rs  events.rs  file_commands.rs  macos_accessibility.rs  macos_prefs.rs  main.rs  mcp_api.rs  open_apps.rs  permissions.rs  project_manager.rs  projects.rs  version_check.rs
src-tauri/src/commands/: agent_binaries.rs  attention.rs  docker.rs  forge.rs  git.rs  github.rs  gitlab.rs  mcp.rs  mcp_config.rs  mod.rs  power.rs  project.rs  pty.rs  schaltwerk_core.rs  session_lookup_cache.rs  sessions_refresh.rs  settings.rs  tasks.rs  terminal.rs  tests.rs  usage.rs  utility.rs
src-tauri/src/commands/schaltwerk_core/: agent_ctx.rs  agent_launcher.rs  codex_model_commands.rs  codex_models.rs  events.rs  schaltwerk_core_cli.rs  terminals.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/agent_plugins/: installer.rs  mod.rs
src-tauri/src/domains/agents/: amp.rs  claude.rs  codex.rs  commit_message.rs  droid.rs  gemini.rs  kilocode.rs  manifest.rs  mod.rs  naming.rs  opencode.rs  unified.rs
src-tauri/src/domains/attention/: mod.rs
src-tauri/src/domains/docker/: command.rs  container.rs  image.rs  mod.rs  mounts.rs  service.rs
src-tauri/src/domains/git/: branches.rs  db_git_stats.rs  forge.rs  github_cli.rs  gitlab_cli.rs  history.rs  mod.rs  operations.rs  repository.rs  service.rs  snapshot.rs  stats.rs  worktrees.rs
src-tauri/src/domains/merge/: lock.rs  mod.rs  service.rs  types.rs
src-tauri/src/domains/network/: diagnostics.rs
src-tauri/src/domains/power/: global_service.rs  security.rs
src-tauri/src/domains/projects/: manager.rs  types.rs
src-tauri/src/domains/sessions/: action_prompts.rs  activity.rs  autonomy.rs  consolidation_stub.rs  db_sessions.rs  entity.rs  facts_recorder.rs  mod.rs  process_cleanup.rs  repository.rs  service.rs  sorting.rs  stage.rs  utils.rs
src-tauri/src/domains/settings/: defaults.rs  mod.rs  service.rs  setup_script.rs  types.rs  validation.rs
src-tauri/src/domains/tasks/: auto_advance.rs  clarify.rs  entity.rs  errors.rs  mod.rs  orchestration.rs  presets.rs  prompts.rs  reconciler.rs  rest_contract.rs  run_status.rs  runs.rs  service.rs  wire.rs
src-tauri/src/domains/terminal/: command_builder.rs  control_sequences.rs  idle_detection.rs  lifecycle.rs  local.rs  login_shell_env.rs  manager.rs  manager_test.rs  mod.rs  submission.rs  tmux.rs  tmux_bootstrap.rs  tmux_cmd.rs  tmux_conf.rs  tmux_inspect.rs  tmux_preflight.rs  utf8_stream.rs
src-tauri/src/domains/usage/: anthropic.rs  mod.rs  provider.rs  (+1 more)
src-tauri/src/infrastructure/: app_handle_registry.rs  attention_bridge.rs  mod.rs  session_facts_bridge.rs  task_lock_manager.rs
src-tauri/src/mcp_api/: diff_api.rs
src-tauri/src/schaltwerk_core/: mod.rs  tests.rs
src-tauri/src/services/: mcp.rs  mod.rs  sessions.rs  terminals.rs  usage.rs
src-tauri/src/shared/: app_paths.rs  cli.rs  login_shell_env.rs  merge_snapshot_gateway.rs  mod.rs  network.rs  project_hash.rs  session_metadata_gateway.rs  terminal_gateway.rs  terminal_id.rs
src-tauri/src/utils/: binary_utils.rs  env_adapter.rs
src-tauri/tests/: arch_app_handle_global_singleton.rs  arch_domain_isolation.rs  arch_hydrator_completeness.rs  arch_no_v1_session_leakage_rust.rs  e2e_legacy_migration_then_read.rs  e2e_per_task_concurrency.rs  e2e_run_failure.rs  e2e_run_lifecycle.rs  e2e_task_lifecycle_full.rs  no_ignored_tests.rs  run_status_integration.rs  spec_name_generation.rs
(+942 files in other folders)
