[package]
name = "lucode"
version = "0.14.1"
description = "AI-powered git worktree session manager for isolated development environments"
authors = ["Lucode Contributors"]
license = "MIT"
repository = "https://github.com/lucacri/lucode"
homepage = "https://github.com/lucacri/lucode"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lucode"
path = "src/main.rs"

[lib]
name = "lucode"
path = "src/lib.rs"
doctest = false


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mimalloc = { version = "0.1", default-features = false }
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["macros", "rt", "process", "sync", "io-util", "time", "net"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
which = "8.0"
nix = { version = "0.31", features = ["signal", "process"] }
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }
r2d2 = "0.8"
uuid = { version = "1.22", features = ["v4", "serde"] }
walkdir = "2.5"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
sha2 = "0.10"
hyper = { version = "1.8", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"
urlencoding = "2.1"
url = "2.5"
getrandom = "0.4"
shell-words = "1.1"
toml = "1.0"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-mini = "0.7"
once_cell = "1"
similar = "2.6"
fontdb = "0.23"
base64 = "0.22"
libc = "0.2"
dashmap = "6"
pty_host = { path = "crates/pty_host" }
vt100 = "0.16"
arboard = "3.6"
plist = "1"
semver = "1"
tempfile = "3.26"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-web-kit = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-os = "2"

[dev-dependencies]
serial_test = "3.4"
filetime = "0.2"
walkdir = "2"
regex = "1"
tauri = { version = "2", features = ["test"] }

[lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"

[lints.clippy]
# Useful warnings
uninlined_format_args = "warn"
needless_borrow = "warn"
semicolon_if_nothing_returned = "warn"
# Allow these for Tauri/macro generated code
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16

# Standard dev profile - optimized for fast compilation
[profile.dev]
opt-level = 0
debug = 0
split-debuginfo = "unpacked"
overflow-checks = false

# Dependencies get minimal optimization for fastest compile
[profile.dev.package."*"]
opt-level = 0
debug = false

[profile.dev.build-override]
opt-level = 0
debug = false

# Production-like dev profile for performance testing
[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = 0
split-debuginfo = "unpacked"
overflow-checks = false

# Dependencies get high optimization for better runtime performance
[profile.dev-opt.package."*"]
opt-level = 3
debug = false

[profile.dev-opt.build-override]
opt-level = 3
debug = false

# Test profile uses minimal optimization for fastest compilation
[profile.test]
opt-level = 0
debug = 0
split-debuginfo = "unpacked"
overflow-checks = false

[profile.test.package."*"]
opt-level = 0
debug = false

[profile.test.build-override]
opt-level = 0
debug = false
